# 5eCharacterTool

./: .gitignore  CMakeLists.txt  README.md  characterMenu.cpp  test.cpp
src/: CMakeLists.txt  armor.cpp  armor.hpp  character.cpp  character.hpp  characterClass.cpp  characterClass.hpp  dice.hpp  enums.hpp  feats.cpp  feats.hpp  proficiencies.cpp  proficiencies.hpp  race.cpp  race.hpp  selecter.cpp  selecter.hpp  sourceBook.hpp  sourceList.hpp  spellcasting.cpp  spellcasting.hpp  stat.hpp  time.hpp  weapon.hpp
testSrc/: CMakeLists.txt  characterTest.cpp  test.cpp
